tests/error/break_out.gw
#! [contains] 'break' found outside of for/while/until
break;
